<?xml version="1.0"?>
<package>
    <name>multirobot_tracker</name>
    <version>0.1.0</version>
    <description>
        <p>
            multirobot_tracker is a simple node ment to be executed in 
            multirobot enviroments. It keeps track of the current namespaces of
            each robot, publishing a list, that can be used to subcribe to all 
            of them at the same time. 
        </p>        
    </description>

    <!-- <url type="website">http://wiki.ros.org/multirobot_tracker</url> -->
    <author email="eduardo.ferrera@uni-due.de">Eduardo Ferrera</author> 
    <maintainer email="eduardo.ferrera@uni-due.de">Eduardo Ferrera</maintainer> 
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
